# bazel-debug-rules-go

./: BUILD.bazel  README.md  WORKSPACE  deps.bzl
go/: BUILD.bazel  def.bzl
