load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
    ],
    importpath = "main",
    visibility = ["//visibility:private"],
    deps = [
    ],
)

go_binary(
    name = "main",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
)
